# voxel

./: Cargo.toml  Makefile  README.md
actor/: Cargo.toml  build.rs
actor/res/: uniform_color_shader.wgsl
actor/src/: actor.rs  lib.rs  model.rs  resources.rs  spawner.rs  transform.rs
render/: Cargo.toml
render/examples/cube/: main.rs
render/examples/res/: shader.wgsl
render/src/: actor.rs  camera.rs  lib.rs  model.rs  pipeline.rs  render.rs  renderer.rs  resources.rs  spawner.rs  state.rs  transform.rs
renderer/: Cargo.toml  build.rs
renderer/examples/cube/: main.rs
renderer/examples/cubes/: main.rs
renderer/examples/res/: uniform_color_shader.wgsl
renderer/src/: camera.rs  instance.rs  lib.rs  model.rs  render.rs  renderer.rs  resources.rs  spawner.rs
voxel/: Cargo.toml
voxel/examples/cube/: main.rs
voxel/examples/cubes/: scene.rs
voxel/examples/ecs/: main.rs  scene.rs
voxel/examples/ecs2/: main.rs
voxel/examples/rapier/: scene.rs
voxel/examples/selection/: scene.rs
voxel/src/: actor.rs  app.rs  camera.rs  delta_time.rs  drawer.rs  event.rs  fly_camera.rs  game_ticker.rs  lib.rs  model.rs  scene.rs  spawner.rs  state.rs  ticker.rs
voxel/src/actor/: actor.rs  mod.rs  transform.rs
voxel/src/ecs/systems/: delta_time.rs
voxel/src/physics/: mod.rs
voxel/src/render/: camera.rs  mod.rs  model.rs  render.rs  renderer.rs
voxel/src/renderer/: mod.rs  pipeline.rs  render.rs  transform.rs  window.rs
