[package]
name = "actor"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
log = "0.4"
tobj = { version = "3.2", features = ["async"]}
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"
