[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actor = { path = "../actor" }
winit = "0.26"
env_logger = "0.9"
log = "0.4"
wgpu = "0.13.1"
bytemuck = { version = "1.4", features = [ "derive" ] }
cgmath = "0.18"
futures = "0.3"
pollster = "0.2"
anyhow = "1.0"
tobj = { version = "3.2", features = ["async"]}

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

