[package]
name = "voxel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18"
specs = { version = "0.18.0", features = ["specs-derive"] }
render = { path = "../render" }
actor = { path = "../actor" }